--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,14 @@
     </parent>
     <groupId>twentyfive</groupId>
     <artifactId>twentyfive-adapter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
+    <packaging>jar</packaging>
     <name>twentyfive-adapter</name>
     <description>twentyfive-adapter</description>
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -27,7 +29,6 @@
             <artifactId>twentyfive-models</artifactId>
             <version>0.0.2</version>
         </dependency>
-
 
 
         <dependency>
@@ -71,22 +72,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>1.8</source> <!-- Use the appropriate Java version -->
-                    <target>1.8</target> <!-- Use the appropriate Java version -->
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>1.4.2.Final</version> <!-- Use the same version as above -->
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
             </plugin>
 
         </plugins>
