--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
     <artifactId>twentyfive-adapter</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Twentyfivesrls Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Twentyfivesrls/linktree-api-layer</url>
+        </repository>
+    </distributionManagement>
+
     <name>twentyfive-adapter</name>
     <description>twentyfive-adapter</description>
     <properties>
@@ -72,6 +81,22 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source> <!-- Use the appropriate Java version -->
+                    <target>1.8</target> <!-- Use the appropriate Java version -->
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>1.4.2.Final</version> <!-- Use the same version as above -->
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
 
         </plugins>
