--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>twentyfive</groupId>
-    <artifactId>twentyfive-adapter</artifactId>
+    <artifactId>com.twentyfive</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
