--- a/pom.xml
+++ b/pom.xml
@@ -82,22 +82,22 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+ <!--           <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source> <!-- Use the appropriate Java version -->
-                    <target>1.8</target> <!-- Use the appropriate Java version -->
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
-                            <version>1.4.2.Final</version> <!-- Use the same version as above -->
+                            <version>1.4.2.Final</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
-            </plugin>
+            </plugin> -->
 
         </plugins>
     </build>
