--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>twentyfive</groupId>
-    <artifactId>com.twentyfive</artifactId>
+    <artifactId>twentyfive-adapter</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
@@ -82,7 +82,7 @@
                     </execution>
                 </executions>
             </plugin>
- <!--           <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
