--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.1.3</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>twentyfive</groupId>
+    <groupId>com.twentyfive</groupId>
     <artifactId>twentyfive-adapter</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
